[workspace]
resolver = "2"
members = [
    "task-ebpf",
    "task-ebpf-ebpf",
]
default-members = ["task-ebpf"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
network-types = { version = "0.0.7", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
clap = { version = "4.5.20", default-features = false, features = ["std"] }
libc = { version = "0.2.159", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.task-ebpf-ebpf]
debug = 2
codegen-units = 1
