[package]
name = "task-ebpf"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "time",
] }
clap = { workspace = true, features = ["derive"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
task-ebpf-ebpf = { path = "../task-ebpf-ebpf" }

[[bin]]
name = "task-ebpf"
path = "src/main.rs"
